Structured and commented .html

--- a/admin.html
+++ b/admin.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <!-- Inputfields in popup with overlay. Default display: none -->
+    <!-- Inputfields in popup with overlay. Hidden on default -->
     <!-- Popup for adding new case -->
     <section id="add-container" class="overlay-container">
         <article class="overlay">
@@ -154,8 +154,8 @@
             <button onclick="topScroll()"><span class="material-icons">arrow_upward</span></button>
         </section>
     </footer>
-    <script src="js/script.js"></script>
     <script src="js/cases.js"></script>
+    <script src="js/script.js"></script>
     <script src="js/admin.js"></script>
 </body>
 
