--- a/case.html
+++ b/case.html
@@ -35,7 +35,7 @@
             <div id="case-banner-left"></div>
             <div id="case-banner-right"></div>
         </section>
-        <!-- Case -->
+        <!-- Cases -->
         <section id="case-wrapper" class="case-wrapper-case-site">
             <section id="case-content-left" class="case-content"></section>
             <section id="case-content-right" class="case-content"></section>
@@ -65,8 +65,8 @@
             <button onclick="topScroll()"><span class="material-icons">arrow_upward</span></button>
         </section>
     </footer>
-    <script src="js/script.js"></script>
     <script src="js/cases.js"></script>
+    <script src="js/script.js"></script>
     <script src="js/case.js"></script>
 </body>
 
