--- a/index.html
+++ b/index.html
@@ -66,20 +66,16 @@
     </header>
     <!-- Main container with main content -->
     <main>
-        <!-- Banner -->
+        <!-- Banner with jquery animation on images -->
         <section id="main-banner" class="banner">
             <h1>RIKETS SIKKERHET</h1>
             <h2>VÅRT ANSVAR</h2>
             <div class="banner-overlay"></div>
-            <img class="banner-img fade" alt="Barcode i Oslo" style="background-image: url('img/banner/1.jpg');">
-            <img class="banner-img fade" alt="Norsk flagg i flaggstang"
-                style="background-image: url('img/banner/2.jpg'); display: none">
-            <img class="banner-img fade" alt="Politistyrke"
-                style="background-image: url('img/banner/3.jpg'); display: none">
-            <img class="banner-img fade" alt="Overvåkingskamera på vegg"
-                style="background-image: url('img/banner/4.jpg'); display: none">
-            <img class="banner-img fade" alt="Politistyrke rundt biler"
-                style="background-image: url('img/banner/5.jpg'); display: none">
+            <img class="banner-img fade" style="background-image: url('img/banner/1.jpg');" alt="Barcode i Oslo" >
+            <img class="banner-img fade" style="background-image: url('img/banner/2.jpg'); display: none" alt="Norsk flagg i flaggstang">
+            <img class="banner-img fade" style="background-image: url('img/banner/3.jpg'); display: none" alt="Politistyrke">
+            <img class="banner-img fade" style="background-image: url('img/banner/4.jpg'); display: none" alt="Overvåkingskamera på vegg">
+            <img class="banner-img fade" style="background-image: url('img/banner/5.jpg'); display: none" alt="Politistyrke rundt biler">
         </section>
         <!-- Cases -->
         <section class="case-wrapper">
@@ -118,8 +114,8 @@
         </section>
     </footer>
     <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/script.js"></script>
     <script src="js/cases.js"></script>
+    <script src="js/script.js"></script>
     <script src="js/index.js"></script>
 </body>
 
